# midnight

./: .flake8  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py
notebooks/: notebook.ipynb
src/midnight/: game.py  main.py  midnight.py  player.py  strategy.py  utils.py
tests/: test_game.py  test_player.py  test_score.py  test_strategy.py
