[metadata]
name = midnight
version = 0.1.0
author = Nahuel Almeira
author_email = nalmeira@unc.edu.ar
description = Midnight game
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    pandas

[options.packages.find]
where=src